# graduation

./: .gitignore  .gitmodules  Dockerfile  analysis.py  authentication_manager.patch  bitrate_analysis.py  callgraph.py  closures_manager.patch  commdb.patch  driver_controls_manager.patch  esc_controller.patch  lighting_manager.patch  lyswe-vehicle.patch  networkconfig.py  pal.patch  pal2.patch  pal_authentication_vouch_mock.patch  pal_scm_delphi_mock.patch  palconfig.py  palvar_check.patch  signal_analysis.py  ssc.patch  steering_manager.patch  tms.patch  vehicle_power_controller.patch  wiper_manager.patch
can_simulation/: .dockerignore  CMakeLists.txt  Dockerfile  generate.py  utilization.m
can_simulation/cmake/: CompilerWarnings.cmake
data/: central.definitions  central_gateway.csv  names_cgw.csv  names_scu.csv  names_vcu.csv  safety_control_unit_primary.csv  vehicle_4.2.1_paldd.csv  vehicle_control_unit.csv
data/can_lists/: driver_support.json  drivetrain.json  energy_can.json  hvbs_can.json  powertrain.json  solar.json  surrounding_sens.json  telematics.json  vehicle.json  vehicle2.json
data/sim_results/: buffersize.py  buffersize_distribution.py  running_barcharts.py
logical_simulation/: .clang-format  .gitignore  CMakeLists.txt  GenerateSimulation.py  VehicleLogicalView  central.definitions  omnetpp.ini  vehicle_4.2.1_paldd.csv
logical_simulation/ned/: DataDictionary.ned  DataRouter.ned  GatewayRunnable.ned  Runnable.ned  simulation.ned
logical_simulation/src/: DataDictionary.cpp  DataDictionary.hpp  DataRouter.cpp  DataRouter.hpp  GatewayRunnable.cpp  GatewayRunnable.hpp  Runnable.cpp  Runnable.hpp
paper/: 1.0.introduction.tex  10.0.reflection.tex  2.0.domain.tex  2.0.problem_statement.tex  2.1.can.tex  2.2.real-time-comm.tex  2.3.architectures.tex  2.3.tsn.tex  2.4.can.tex  3.0.problem_statement.tex  3.0.sota_analysis.tex  4.0.research_description.tex  4.0.sota_analysis.tex  5.0.feasibility_experiments.tex  5.0.planning.tex  5.0.research_description.tex  5.1.in_vehicle_network.tex  5.1.research_question.tex  5.2.network_traffic.tex  5.2.research_contribution.tex  5.3.omnetpp.tex  6.0.approach.tex  6.0.feasibility_experiments.tex  6.1.1.in_vehicle_network.tex  6.1.2.programmable_end_nodes.tex  6.1.embedded_system.tex  6.1.in_vehicle_network.tex  6.2.modelling_network.tex  6.2.network_traffic.tex  6.3.model_generation.tex  6.3.omnetpp.tex  7.0.planning.tex  7.0.results.tex  8.0.discussion.tex  9.0.conclusion.tex  A.tsn.tex  CMakeLists.txt  example_task.c  main.tex  network_overview_figure.tex  (+7 more)
paper/figures/: bridging_example.tikz  logical_example.tikz  runnable_single_physical.tikz
paper/images/: Network_overview.xcf  Produce_Consume_CAN_graph.pgf  Produce_Consume_graph.pgf  buffersize.pgf  buffersize_dist.pgf  task_overrun.pgf  utilization.pgf  vehicle_speed_age.pgf
preparation-phase-paper/: .gitignore  1.0.introduction.tex  2.0.domain.tex  3.0.problem_statement.tex  8.0.conclusion.tex  main.tex  sample.tikzstyles
preparation-phase-paper/figures/: deployment_example.tikz
